# wazuh

api/api/: alogging.py  configuration.py  util.py  validator.py
api/api/configuration/: api.yaml
api/api/spec/: spec.yaml
api/api/test/: test_alogging.py  test_configuration.py
api/scripts/: wazuh-apid.py
api/test/integration/: conftest.py  tavern_utils.py  test_rbac_white_all_endpoints.tavern.yaml
framework/: requirements.txt
framework/scripts/: cluster_control.py  wazuh-clusterd.py
framework/wazuh/core/: common.py  configuration.py  exception.py  utils.py  wlogging.py
framework/wazuh/core/cluster/: cluster.json  cluster.py  master.py  server.py  task_pool_functions.py  worker.py
framework/wazuh/core/tests/: test_utils.py  test_wlogging.py
src/analysisd/: lists_list.c  rules.c  rules_list.c
src/config/: syscheck-config.h
src/data_provider/src/network/: networkSolarisHelper.cpp  (+1 more)
src/error_messages/: error_messages.h  warning_messages.h
src/headers/: defs.h
src/init/: pkg_installer.sh  register_configure_agent.sh
src/os_auth/: auth.c
src/os_crypto/shared/: keys.c
src/remoted/: manager.c
src/syscheckd/: create_db.c  run_check.c  syscheck.h
src/syscheckd/db/: CMakeLists.txt
src/syscheckd/db/tests/fimDBInterface/: CMakeLists.txt  dbTest.cpp  dbTest.hpp
src/syscheckd/registry/: registry.c
src/unit_tests/analysisd/: test_logtest.c  test_rules.c
src/unit_tests/shared/: test_validate_op.c
src/wazuh_db/: wdb.h
src/wazuh_modules/: wm_database.c
src/win32/: InstallerScripts.vbs  do_upgrade.ps1  wazuh-installer.wxs
(+25 files in other folders)
